--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,7 +1,7 @@
 page-welcome {
   .splash-bg {
     position: relative;
-    background: url('../assets/img/splashbg.png') no-repeat transparent;
+    background: url('../assets/img/splashbg.PNG') no-repeat transparent;
     background-size: cover;
     height: 45%;
     z-index: 1;
@@ -22,7 +22,7 @@ page-welcome {
   }
   .splash-logo {
     margin: auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('../assets/img/appicon-2.png') repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
