--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,2 +1,24 @@
 page-login {
 }
+
+.center {
+    margin-top: 300px;
+    margin-right: auto;
+    display: block;
+}
+
+ion-grid {
+    height: 100%;
+    justify-content: center;
+}
+
+button.login {
+    margin-top: auto;
+    background-color: white;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    color: #333;
+
+    &.activated {
+      background-color: rgb(220, 220, 220);
+    }
+  }
