--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -33,8 +33,17 @@ page-welcome {
     max-width: 80%;
     margin: auto;
   }
+
+  .center{
+    display: table;
+    margin: 0 auto;
+    width: 100%;    
+  }
   button.login {
-    margin-top: 25px;
+    display: table;
+    margin: 0 auto;
+    width: 100%;
+    margin-top: 5px;
     background-color: white;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     color: #333;
