Nan | diable bizhidao Button on cards, disable sccs scroll-content for login ios

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -53,5 +53,5 @@ page-welcome {
     }
   }
 
-  .scroll-content {padding-bottom:0!important;}
+  // .scroll-content {padding-bottom:0!important;}
 }
